--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ $RECYCLE.BIN/
 # =========================
 # Operating System Files
 # =========================
+*.DS_Store
+4797487226595349426/repository/8555781317612585347
+*.class
