Ignore text files

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ old_commands/**
 old_RemoteInputFileStream/**
 **/repository/**
 *.log
+Search Results Difference - fear.txt
+Search Results New - fear.txt
+Search Results Old - fear.txt
