--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ old_RemoteInputFileStream/**
 Search Results Difference - fear.txt
 Search Results New - fear.txt
 Search Results Old - fear.txt
+Search Results Old 2 - fear.txt
+Search Results New - moon.txt
