--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ Search Results New - fear.txt
 Search Results Old - fear.txt
 Search Results Old 2 - fear.txt
 Search Results New - moon.txt
+Search Results New 2 - fear.txt
